REGRESSION (r258334): WebPasteboardProxy::setPasteboardBufferForType should allow zero-size buffers <https://webkit.org/b/209167> <rdar://problem/60516302>

Reviewed by Geoffrey Garen.

* UIProcess/Cocoa/WebPasteboardProxyCocoa.mm:
(WebKit::WebPasteboardProxy::setPasteboardBufferForType):
- Remove check for zero-size buffer to match
  WebPageProxy::dataSelectionForPasteboard().


Canonical link: https://commits.webkit.org/222103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258565 268f45cc-cd09-0410-ab3c-d52691b4dbfc